# pdfcontentbypy

./: pyproject.toml
src/: changecontent.py
